# Deep_CNN_Classifier

./: .gitignore  README.md  dvc.yaml  init_setup.sh  params.yaml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py
configs/: config.yaml
prediction_service/: app.py
research/: st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05_trails.ipynb  trails.ipynb
research/mlflow_dir/: example.py
src/deepCNNClassifier/: __init__.py
src/deepCNNClassifier/components/: __init__.py  component_base_model.py  data_ingestion.py  evaluation.py  prepare_callback.py  training.py
src/deepCNNClassifier/config/: configuration.py
src/deepCNNClassifier/entity/: __init__.py  config_entity.py
src/deepCNNClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/deepCNNClassifier/utils/: common.py
tests/integration/: test_data_ingestion.py
tests/unit/: test_data_ingestion.py  test_utils.py
