# This 'setup config' file contains Metadata of the Project
[Metadata]
license = MIT
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]    
install_requires =            #third party dependency files
    ensure == 1.0.2
python_requires = >=3.7

[options.extras_require]     # used for development
testing =    
    pytest>=7.1.3          # use to run Unit and Integration test
    mypy>=0.971            # use to check any typing error in the application or not
    flake8>=5.0.4          # use to check for any mistake in coding like extra space etc.         
    tox>=3.25.1            # use to create diffrent working environment and test application locally
    black>=22.8.0          # used for formating the application to follow standard python structure 

[options.package_data]     # where is my file
    deepCNNClassifier = py.typed    # to ignore some py typed error

[flake8]                  # check to follow standard python 
max-line-length = 160
exclude = __init__.py